fix(security): price tampering, ownership verification and idempotent PayPal capture